# libres-api

./: Cargo.toml
.github/workflows/: rust.yml
migrations/: 20230130003847_create_users.up.sql  20230130005215_create_reservations.down.sql  20230130005215_create_reservations.up.sql  20230130005215_create_reserves.down.sql  20230130005215_create_reserves.up.sql  20230210024716_create_sessions.down.sql  20230210024716_create_sessions.up.sql
src/: api.rs  calil_api.rs  cinii_api.rs  entity.rs  google_api.rs  lib.rs  main.rs  models.rs  ndl_api.rs  nicii_api.rs  rakuten_api.rs
