[package]
name = "calil-interface-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
awc = { version = "3", features = ["rustls"] }
once_cell = "1"
roxmltree = "0.17"
serde = { version = "1", features = ["derive"] }
geoutils = "0.5"
