[package]
name = "libres-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
awc = { version = "3", features = ["rustls"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
geoutils = "0.5"
once_cell = "1"
rand = "0.8"
roxmltree = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "chrono"] }
